# hermes

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/tcp/: master.cpp  slave.cpp
include/hermes/: CommandData.h  CommandPayload.h  Config.h  DummySlave.h  EasySlave.h  EasySlaveProperty.h  ErrorPayload.h  Event.h  HandshakePayload.h  Helpers.h  IO.h  InMemoryIO.h  Master.h  Message.h  MessageBuilder.h  Slave.h  SlaveDescriptor.h  Types.h  UnixTCPSocketIO.h  ValueData.h
src/: DummySlave.cpp  InMemoryIO.cpp  Master.cpp  Message.cpp  Slave.cpp  SlaveDescriptor.cpp  UnixTCPSocketIO.cpp
tests/x86/: mail.cpp
